Let controller decide when to ask RoutingGenerator for endpoints
This is currently decided in the implementation of `RoutingGenerator`, thus
hiding this behaviour from all controller tests.

Tests using directly routed zones must now tag those zones explicitly.